# k8s-log4j-mitigation

./: README.md  yelb-k8s-app.yaml
istio/: gateway.yaml
istio/envoy-filter/: log4j-exploit-filter.yaml
k8s-webhook/: .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml
k8s-webhook-chart/: Chart.yaml
k8s-webhook-chart/templates/: _helpers.tpl  deployment.yaml
k8s-webhook/.cargo/: config.toml
k8s-webhook/certs/: PLACEHOLDER.txt  tls.crt  tls.key
k8s-webhook/src/: main.rs
