[package]
name = "log4j-mutating-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features = ["openssl"] }
chrono = "0.4.19"
openssl-sys = "0.9.72"
openssl = "0.10.38"

serde = "1.0.132"
serde_json = "1.0.73"
base64 = "0.13.0"
clap = "2.34.0"

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"