[package]
name = "log4j-mutating-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.3", features = ["openssl"] }
chrono = "0.4.19"
openssl = "0.10.38"
serde_json = "1.0.75"
base64 = "0.13.0"
clap = "3.0.7"

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"
incremental = true