[package]
name = "log4j-mutating-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "~4", features = ["openssl"] }
chrono = "~0"
openssl = "~0"
serde_json = "~1"
base64 = "~0"
clap = "~3"

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
